# rusty-vault

./: Cargo.toml  mod.rs  prelude.rs
entities/: Cargo.toml
entities/src/: api_key.rs  auth_api_key.rs  auth_method_magiclink.rs  auth_method_pass.rs  auth_token.rs  email.rs  file.rs  group.rs  group_access_role.rs  group_auth_role.rs  lib.rs  organisation.rs  organisation_access_role.rs  organisation_profile.rs  phone.rs  pki_key.rs  user.rs  user_email.rs  user_phone.rs  user_profile.rs  users_groups_group_access_roles.rs  users_groups_group_auth_roles.rs  users_organisations_organisations_access_roles.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230315_143439_create_tables.rs
shared/: Cargo.toml
src/: main.rs
