[workspace]
members = [".", "shared", "entities", "migration"]

[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "entities" }
migration = { path = "migration" }
actix-web = "4.3.1"
chrono = "0.4.24"
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures-util = "0.3.27"
json = "0.12.4"
log = "0.4.17"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["v4"] }
sea-orm = { version = "0.11.1", features = ["sqlx-postgres", "runtime-actix-rustls", "macros", "with-json", "with-uuid", "with-chrono", "postgres-array"] }
rustls = "0.20.8"
serde-email = "1.3.0"
rand = "0.8.5"
