[package]
name = "entities"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.156", features = ["derive"] }
bcrypt = "0.14.0"
rand = "0.8.5"
names = { version = "0.14.0", default-features = false }
serde-email = "1.3.0"
#sea-orm = "0.11.1"
chrono = "0.4.24"

[dependencies.sea-orm]
version = "0.11.1"
