[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
entities = { path = "../entities" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.24", features = ["serde"] }
sea-orm-migration = { version = "0.11.1", features = ["sqlx-postgres", "runtime-actix-rustls"] }
log = "0.4.17"
